--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="nav_header_subtitle">Erfassung aller Fitnessdaten</string>
+    <string name="main_menu">Ansicht</string>
+    <string name="nav_menu_controls">Bedienelemente</string>
+    <string name="nav_menu_tracks">Tracks</string>
 </resources>
