--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="stop">Stop</string>
     <string name="reset">Reset</string>
     <string name="start">Start</string>
+    <string name="track_symbol">Track symbol</string>
 </resources>
