--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="zeit">Zeit</string>
     <string name="dgeschwindigkeit">Ø-Geschwindigkeit</string>
     <string name="max_geschwindigkeit">Max. Geschwindigkeit</string>
+    <string name="gps_marker">Gps marker</string>
 </resources>
