--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="textViewUploadDescription">Karte im Format \"MapsForge\" downloaden. Besuche die Seite \"https://download.mapsforge.org/\" und suche die gewünschte Karte aus. Die Url zum Download hier eintragen:</string>
     <string name="editTextMapUploadHint">Url der Karte eintragen</string>
     <string name="btnMapDownload">Download</string>
+    <string name="bike_settings">Bike-Einstellungen</string>
+    <string name="toast_nomaps">Du musst erst eine Karte in den Einstellungen auswählen!</string>
 </resources>
