--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="no_location_access">Kein Zugriff auf den Standort</string>
     <string name="no_persistent_location_access">Kein ständiger Zugriff auf den Standort</string>
     <string name="no_storage_access">"Kein Zugriff auf den Speicher "</string>
+    <string name="bike_sensor">Festlegung des Bike-Sensors</string>
 </resources>
