--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="nav_menu_tracks">Tracks</string>
     <string name="display">Display</string>
     <string name="stop">Stop</string>
-    <string name="reset">Reset</string>
+    <string name="btn_map_view">Kartenansicht</string>
     <string name="start">Start</string>
     <string name="track_symbol">Track symbol</string>
     <string name="toggle_controls">toggle controls</string>
