--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,8 @@
     <string name="no_location_access">Kein Zugriff auf den Standort</string>
     <string name="no_persistent_location_access">Kein ständiger Zugriff auf den Standort</string>
     <string name="no_storage_access">"Kein Zugriff auf den Speicher "</string>
-    <string name="bike_sensor">Festlegung des Bike-Sensors</string>
+    <string name="bike_sensor">Bike-Sensor</string>
     <string name="alert_stop_service">Möchtest Du die Aufzeichnung beenden?</string>
     <string name="alert_title_stop_service">Beenden</string>
+    <string name="heartrate_sensor">Herzfrequenz-Sensor</string>
 </resources>
