--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="alert_title_stop_service">Beenden</string>
     <string name="heartrate_sensor">Herzfrequenz-Sensor</string>
     <string name="menu_eventlog">Ereignisanzeige</string>
+    <string name="log_type_image">log type image</string>
 </resources>
