--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="bike_support_description">Unterstützung für Bike Sensoren einschalten</string>
     <string name="bike_circumference">Radumfang</string>
     <string name="bike_circumference_description">Gib bitte den Rad-Umfang in mm ein</string>
+    <string name="maps_description">Kartenauswahl</string>
 </resources>
