--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="bike_circumference">Radumfang</string>
     <string name="bike_circumference_description">Gib bitte den Rad-Umfang in mm ein</string>
     <string name="maps_description">Kartenauswahl</string>
+    <string name="permission_location_always_rationale">Super Fit benötigt ständigen Zugriff auf den genauen Standort, um die Position auf der Karte anzuzeigen, und im Hintergrund die Strecke aufzuzeichnen</string>
     <string name="permission_location_rationale">Super Fit benötigt Zugriff auf den genauen Standort, um die Position auf der Karte anzuzeigen</string>
     <string name="permission_external_storage_rationale">Super Fit benötigt Leseberechtigungen auf den Speicher, um die Landkarte anzuzeigen</string>
     <string name="permission_notification_rationale">Super Fit muss Benachrichtigungen anzeigen können</string>
